working copy of code for final upload

--- a/EmployeeSQL/Bonus.ipynb
+++ b/EmployeeSQL/Bonus.ipynb
@@ -1,9 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "d5bfdf46",
+   "metadata": {},
+   "source": [
+    "## Pewlett Hackard Additional Analysis"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "bc01e2e1",
+   "id": "b37137fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "28ebb93a",
+   "id": "2c68cb5a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1238987b",
+   "id": "b3c79538",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,9 +53,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a24e9698",
+   "metadata": {},
+   "source": [
+    "## Common Salary Ranges for Employees"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b6f5cac3",
+   "id": "21331871",
    "metadata": {},
    "outputs": [
     {
@@ -852,8 +868,8 @@
     "emp_salaries_df = pd.read_sql_query(salaries_query, con=connection)\n",
     "\n",
     "# plot the histogram\n",
+    "fig = plt.figure(figsize=(8,6))\n",
     "emp_salaries_df['salary'].plot(kind='hist',\n",
-    "                               figsize = (8,6),\n",
     "                               color='teal',\n",
     "                               rot=45\n",
     ")\n",
@@ -861,13 +877,16 @@
     "plt.xlabel('Salaries', fontsize=12, weight='bold')\n",
     "plt.ylabel('Frequency', fontsize=12, weight='bold')\n",
     "plt.grid(axis='y', color='gray', linestyle='-', linewidth=0.2)\n",
-    "plt.tight_layout()"
+    "plt.tight_layout()\n",
+    "\n",
+    "# Save the figure\n",
+    "fig.savefig(f'images/CommonSalaryRanges.png')\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f74993e1",
+   "id": "a3080c1c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -878,9 +897,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "49ae6c72",
+   "metadata": {},
+   "source": [
+    "## Average Salary by Title"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a7701199",
+   "id": "1f2a29cf",
    "metadata": {},
    "outputs": [
     {
@@ -1683,7 +1710,7 @@
     "left join salaries as s on\n",
     "e.emp_no=s.emp_no\n",
     "left join titles as t on\n",
-    "e.emp_title_id=t.titles\n",
+    "e.emp_title_id=t.title_id\n",
     "group by t.title\n",
     "order by \"Average Salary by Title\" desc\n",
     "'''\n",
@@ -1703,13 +1730,17 @@
     "plt.ylim(45000, 60000)\n",
     "plt.grid(axis='y', color='gray', linestyle='-', linewidth=0.2)\n",
     "plt.tight_layout()\n",
+    "\n",
+    "# Save the figure\n",
+    "fig.savefig(f'images/AverageSalaryByTitle.png')\n",
+    "\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "2e92f405",
+   "id": "36d4d944",
    "metadata": {},
    "outputs": [],
    "source": [
